--- a/Editor/Editor/package.json
+++ b/Editor/Editor/package.json
@@ -26,6 +26,7 @@
     "cheerio": "^1.0.0-rc.2",
     "electron-context-menu": "^0.9.1",
     "node-osc": "^2.1.0",
-    "osc-js": "^1.2.0"
+    "osc-js": "^1.2.0",
+    "request": "^2.83.0"
   }
 }
